# tea

./: COPYING  DESCRIPTION  NAMESPACE  Notes  README.md  config.status  configure  index.html  keys.html  make_docs  makefile
R/: .doTEA.R.swp  .edits.R.swp  Rflag.SQL.R  doPEP.R  doTEA.R  edits.R  method.R  models.R  output.R  raking.R  regression.R  rnkswp.R  seqRegAIC.R  srmi.R  stepAICtry.R  utils.R
c/: PEPedits.c  doxyconfig  in_out_tree.c  internal.h  tea.h  utils.c
c/discrete/: bridge.c  consistency.c  discrete.h  ext_to_em.c  gen_52b.c  internal.h  name_conversions.c  r_check.c
c/impute/: Readme  checkout.c  em.c  em_weight.c  em_weight.h  impute.c  impute_variance.c  parse_sql.c  rel.c
c/peptalk/: levendistance.c  lex.yy.c  peptalk.l  peptalk.y
c/raking/: log_linear_ipf.c
c/rnkswp/: rnkswp.c
c/speer/: GenBnds.c  SPEER.c
c/tests/: asst_tests.c  commit_tests.c  levenshtein_test.c  pastein_test.c
c/text_in/: recodes.c  text_in.c
data/: dch.csv  ss08pdc.csv
demo/: checks  config  demo.R  demo.c  demo.spec  insert_bugs  intro.css  intro.tex  latex2html.cfg  makefile  newtest  rolando_plot
demo/bigdemo/: hh.R  hh.spec
doc/: div.m4  key_prints.m4  key_prints.tex  keys.tex  make_key_docs.awk  make_key_docs.m4  make_key_html.m4  make_key_list.m4  make_key_prints.m4  makefile  paper.tex  tea.bib  tea.tex  tutorial.tex  tutorial_intro_combined.css  tutorial_intro_combined.html
doc/archived_tutorial_documents/: internals  intro.tex  keys.tex  paper.aux  tutorial_intro_combined.tex
doc/current_tutorial_documents/: dotChecks  dotFile  dotRecodes  graphvizzz.sty  input.tex  keys.tex  makefile  tutorial.tex  tutorial_intro_combined.tex  tutorial_script.sh
doc/dots/: README  connected_dot_file  dotImpute_scr  dotInput_scr  dotRecodes_scr  dotScript.sh  make_dot  pepflow.dot
doc/outline/: outline.tex
pkging/: DESCRIPTION  NAMESPACE  configure.ac
speer/: GenBnds.c
src/: .PEPedits.c.swp  .asst_tests.c.swp  .bridge.c.swp  .checkout.c.swp  .consistency.c.swp  .em.c.swp  .em_weight.c.swp  .ext_to_em.c.swp  .gitignore  .impute.c.swo  .impute.c.swp  .in_out_tree.c.swp  .internal.h.swp  .name_conversions.c.swp  .peptalk.l.swp  .peptalk.y.swp  .recodes.c.swp  .tea.h.swp  .text_in.c.swp  Doxyfile  GenBnds.c  PEPedits.c  asst_tests.c  bridge.c  checkout.c  consistency.c  em.c  em_weight.c  ext_to_em.c  imputation_variance.h  impute.c  impute_variance.c  in_out_tree.c  internal.h  keylist  levendistance.c  levenshtein_test.c  lex.yy.c  log_linear_ipf.c  name_conversions.c  (+16 more)
tea/: DESCRIPTION  configure
tests/: .RData  .Rhistory  .em_imputation.R.swp  .em_imputation.spec.swp  .joined.spec.swp  .preeditcheck.R.swp  .preeditcheck.data.swp  .preeditcheck.spec.swp  1.spec  2.spec  3.spec  4.spec  5.spec  R_warnings_test.R  Reg.R  Reg.spec  SPEER.R  SPEER.spec  asst.R  bad1.R  dc_pums_08.csv  demo.db  demo.db-journal  edit.R  edit.spec  edit_tmp.db  edit_tmp.db-journal  editcheck.R  editcheck.data  editcheck.spec  edits.R  em.db  em_imputation.R  em_imputation.spec  fake_in.csv  fill_via_em.csv  fill_via_hot_deck.csv  hello.R  hello.spec  incl_error.R  (+34 more)
vignettes/: data.Rnw  model.Rnw
www/: index.php  keys.tex
(+97 files in other folders)
